--- a/app/src/main/res/layout/fragment_home_mine.xml
+++ b/app/src/main/res/layout/fragment_home_mine.xml
@@ -110,29 +110,33 @@
         app:textColor="@color/color_333333"
         app:textSize="@dimen/sp16" />
 
+
+    <com.cylan.jiafeigou.widget.HomeMineItemView
+        android:id="@+id/home_mine_item_help"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/home_mine_item_share"
+
+
+        app:leftDrawable="@drawable/me_icon_hlep"
+        app:rightDrawable="@drawable/icon_list_next"
+        app:text="@string/Tap3_Feedback"
+        app:textColor="@color/color_333333"
+        app:textSize="@dimen/sp16" />
+
     <com.cylan.jiafeigou.widget.HomeMineItemView
         android:id="@+id/home_mine_item_settings"
         android:layout_width="0dp"
         android:layout_height="70dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_mine_item_share"
+        app:layout_constraintTop_toBottomOf="@+id/home_mine_item_help"
         app:leftDrawable="@drawable/me_icon_setting"
         app:rightDrawable="@drawable/icon_list_next"
         app:text="@string/SETTINGS"
-        app:textColor="@color/color_333333"
-        app:textSize="@dimen/sp16" />
-
-    <com.cylan.jiafeigou.widget.HomeMineItemView
-        android:id="@+id/home_mine_item_help"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_mine_item_settings"
-        app:leftDrawable="@drawable/me_icon_hlep"
-        app:rightDrawable="@drawable/icon_list_next"
-        app:text="@string/Tap3_Feedback"
         app:textColor="@color/color_333333"
         app:textSize="@dimen/sp16" />
 
