--- a/app/src/main/res/values-small/styles.xml
+++ b/app/src/main/res/values-small/styles.xml
@@ -1,6 +1,10 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="AppTheme" parent="android:Theme.Light" />
+    <style name="AppTheme" parent="android:Theme.Light">
+        <item name="colorAccent">@color/color_4b9fd5</item>
+        <item name="colorControlNormal">@color/color_4b9fd5</item>
+        <item name="colorControlActivated">@color/color_4b9fd5</item>
+    </style>
 
     <style name="edittext">
         <item name="android:layout_width">wrap_content</item>
