--- a/app/src/main/res/values-v14/styles.xml
+++ b/app/src/main/res/values-v14/styles.xml
@@ -1,6 +1,10 @@
 <resources>
 
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar" />
+    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+        <item name="colorAccent">@color/color_4b9fd5</item>
+        <item name="colorControlNormal">@color/color_4b9fd5</item>
+        <item name="colorControlActivated">@color/color_4b9fd5</item>
+    </style>
 
     <style name="CamActivityTheme" parent="AppTheme" />
 </resources>
