--- a/app/src/main/res/layout/fragment_home_mine_share_content.xml
+++ b/app/src/main/res/layout/fragment_home_mine_share_content.xml
@@ -7,6 +7,10 @@
         <import type="android.view.View" />
 
         <variable
+            name="isEmpty"
+            type="android.databinding.ObservableBoolean" />
+
+        <variable
             name="backAction"
             type="android.view.View.OnClickListener" />
 
@@ -22,9 +26,7 @@
             name="selectNumber"
             type="android.databinding.ObservableInt" />
 
-        <variable
-            name="isEmpty"
-            type="android.databinding.ObservableBoolean" />
+
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -49,10 +51,12 @@
             app:ct_left_title_color="@color/color_white"
             app:ct_right_title_color="@color/color_white"
             app:rightAction="@{rightAction}"
+            app:rightEnable="@{isEmpty?false:true}"
             app:toolbarRightTitle="@{editMode?@string/CANCEL:@string/EDIT_THEME}" />
 
 
         <LinearLayout
+            android:id="@+id/empty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/y180"
