--- a/app/src/main/res/layout/activity_panorama_camera.xml
+++ b/app/src/main/res/layout/activity_panorama_camera.xml
@@ -51,11 +51,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/act_panorama_camera_bottom_panel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/act_panorama_camera_toolbar"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintTop_toBottomOf="@+id/act_panorama_camera_toolbar" />
 
     <ViewSwitcher
         android:id="@+id/act_panorama_camera_banner"
@@ -199,8 +198,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
 
-        app:layout_constraintTop_toBottomOf="@+id/act_panorama_camera_toolbar"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintTop_toBottomOf="@+id/act_panorama_camera_toolbar" />
 
     <TextView
         android:id="@+id/act_panorama_camera_upgrading"
@@ -213,13 +211,12 @@
         app:layout_constraintBottom_toTopOf="@+id/act_panorama_camera_bottom_panel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/act_panorama_camera_toolbar"
-        tools:layout_editor_absoluteX="144dp" />
+        app:layout_constraintTop_toBottomOf="@+id/act_panorama_camera_toolbar" />
 
     <View
         android:id="@+id/act_panorama_camera_bottom_count_down_line"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y2"
         android:layout_centerHorizontal="true"
         android:background="@color/color_0ba8cf"
         android:visibility="gone"
@@ -246,8 +243,7 @@
             app:layout_constraintBottom_toTopOf="@+id/act_panorama_bottom_panel_camera_photograph"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="165dp">
+            app:layout_constraintTop_toTopOf="parent">
 
             <RadioGroup
                 android:id="@+id/act_panorama_camera_bottom_panel_switcher_menu_item"
@@ -288,19 +284,18 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:layout_editor_absoluteX="165dp" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:id="@+id/act_panorama_camera_bottom_panel_switcher_menu_information_red_dot"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
+                    android:layout_width="@dimen/y8"
+                    android:layout_height="@dimen/y8"
+                    android:layout_marginEnd="@dimen/y8"
                     android:src="@drawable/panorama_redording_red_dot"
                     app:layout_constraintBottom_toBottomOf="@+id/act_panorama_camera_bottom_panel_switcher_menu_information_record_time"
                     app:layout_constraintEnd_toStartOf="@+id/act_panorama_camera_bottom_panel_switcher_menu_information_record_time"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/act_panorama_camera_bottom_panel_switcher_menu_information_record_time"
-                    tools:layout_editor_absoluteX="165dp" />
+                    app:layout_constraintTop_toTopOf="@+id/act_panorama_camera_bottom_panel_switcher_menu_information_record_time" />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -311,6 +306,10 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginBottom="@dimen/y32"
+            android:layout_marginEnd="@dimen/y62"
+            android:layout_marginLeft="@dimen/y32"
+            android:layout_marginRight="@dimen/y62"
+            android:layout_marginStart="@dimen/y32"
             android:src="@drawable/camera720_icon_album_selector"
             app:civ_border_color="@color/color_white"
             app:civ_border_overlay="true"
@@ -319,8 +318,7 @@
             app:layout_constraintEnd_toStartOf="@id/act_panorama_bottom_panel_camera_photograph"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:riv_oval="false"
-            tools:layout_editor_absoluteX="43dp" />
+            app:riv_oval="false" />
 
         <ImageButton
             android:id="@+id/act_panorama_bottom_panel_camera_photograph"
@@ -331,33 +329,34 @@
             android:src="@drawable/camera720_icon_photograph_selector"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteX="165dp" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ProgressBar
             android:id="@+id/act_panorama_bottom_panel_loading"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="@dimen/y22"
+            android:layout_height="@dimen/y22"
             android:indeterminateDrawable="@drawable/camera720_loading"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/act_panorama_bottom_panel_camera_photograph"
             app:layout_constraintEnd_toEndOf="@id/act_panorama_bottom_panel_camera_photograph"
             app:layout_constraintStart_toStartOf="@id/act_panorama_bottom_panel_camera_photograph"
-            app:layout_constraintTop_toTopOf="@+id/act_panorama_bottom_panel_camera_photograph"
-            tools:layout_editor_absoluteX="193dp" />
+            app:layout_constraintTop_toTopOf="@+id/act_panorama_bottom_panel_camera_photograph" />
 
         <ImageButton
             android:id="@+id/act_panorama_camera_bottom_panel_more"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginBottom="@dimen/y32"
+            android:layout_marginEnd="@dimen/y32"
+            android:layout_marginLeft="@dimen/y62"
+            android:layout_marginRight="@dimen/y32"
+            android:layout_marginStart="@dimen/y62"
             android:background="@android:color/transparent"
             android:src="@drawable/camera720_icon_more_selector"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/act_panorama_bottom_panel_camera_photograph"
-            tools:layout_editor_absoluteX="318dp" />
+            app:layout_constraintStart_toEndOf="@+id/act_panorama_bottom_panel_camera_photograph" />
 
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
