广告页面,铺满屏幕,可能有亚索有拉伸

--- a/app/src/main/res/layout/activity_ads.xml
+++ b/app/src/main/res/layout/activity_ads.xml
@@ -7,6 +7,7 @@
     tools:context="com.cylan.jiafeigou.ads.AdsActivity">
 
     <ImageView
+        android:scaleType="fitXY"
         android:id="@+id/imv_ads_pic"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
