--- a/app/src/main/res/layout/activity_panorama_detail.xml
+++ b/app/src/main/res/layout/activity_panorama_detail.xml
@@ -69,10 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:padding="0dp"
-                android:progressDrawable="@drawable/seek_bar_drawable"
-                android:secondaryProgress="70"
-                android:thumb="@drawable/panorama_detial_seek_bar_thumb_drawable" />
+                android:padding="0dp" />
 
             <LinearLayout
                 android:id="@+id/act_panorama_detail_bottom_video_menu_container"
