--- a/app/src/main/res/layout/fragment_has_share_to_friend_items.xml
+++ b/app/src/main/res/layout/fragment_has_share_to_friend_items.xml
@@ -5,64 +5,64 @@
 
     <RelativeLayout
 
-        android:layout_marginLeft="@dimen/x15"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y67">
+        android:layout_height="@dimen/y67"
+        android:layout_marginLeft="@dimen/x15">
 
-        <com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView
-            android:layout_centerVertical="true"
+        <com.cylan.jiafeigou.support.photoselect.CircleImageView
             android:id="@+id/iv_userhead"
-            android:src="@drawable/img_me_list_head"
-            android:layout_width="@dimen/x50"
-            android:layout_height="@dimen/y50" />
+            android:layout_width="@dimen/y50"
+            android:layout_height="@dimen/y50"
+            android:layout_centerVertical="true"
+            android:src="@drawable/img_me_list_head" />
 
         <RelativeLayout
-            android:gravity="center_vertical"
-            android:layout_toRightOf="@id/iv_userhead"
-            android:paddingLeft="@dimen/x15"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/y67">
+            android:layout_height="@dimen/y67"
+            android:layout_toRightOf="@id/iv_userhead"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/x15">
 
             <TextView
                 android:id="@+id/tv_username"
-                android:textSize="@dimen/sp16"
-                android:textColor="@color/color_333333"
-                android:text="小名"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="小名"
+                android:textColor="@color/color_333333"
+                android:textSize="@dimen/sp16" />
 
             <TextView
                 android:id="@+id/tv_friend_account"
-                android:paddingTop="@dimen/y8"
-                android:layout_below="@id/tv_username"
-                android:textSize="@dimen/sp12"
-                android:textColor="@color/color_8c8c8c"
-                android:text="我是小姨"
-                android:singleLine="true"
-                android:ellipsize="end"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_username"
+                android:ellipsize="end"
+                android:paddingTop="@dimen/y8"
+                android:singleLine="true"
+                android:text="我是小姨"
+                android:textColor="@color/color_8c8c8c"
+                android:textSize="@dimen/sp12" />
         </RelativeLayout>
 
         <TextView
             android:id="@+id/tv_btn_cancle_share"
-            android:layout_marginRight="@dimen/x15"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:text="@string/Tap3_ShareDevice_Delete"
-            android:background="@drawable/btn_cancle_relative_doorbell_shape"
-            android:textSize="@dimen/sp13"
-            android:gravity="center"
-            android:textColor="@color/color_4b9fd5"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/x15"
+            android:background="@drawable/btn_cancle_relative_doorbell_shape"
+            android:gravity="center"
+            android:text="@string/Tap3_ShareDevice_Delete"
+            android:textColor="@color/color_4b9fd5"
+            android:textSize="@dimen/sp13" />
 
         <View
-            android:layout_alignParentBottom="true"
             android:id="@+id/view_line"
-            android:background="@color/color_f2f2f2"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/y1" />
+            android:layout_height="@dimen/y1"
+            android:layout_alignParentBottom="true"
+            android:background="@color/color_f2f2f2" />
 
     </RelativeLayout>
 
