做了无用功

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,6 +48,7 @@
     <color name="color_f6f9fa">#F6F9FA</color>
     <color name="color_f4f4f4">#F4F4F4</color>
     <color name="color_36BDFF">#36BDFF</color>
+    <color name="color_4036BDFF">#4036BDFF</color>
     <color name="color_f28080">#F28080</color>
     <color name="color_66bb6a">#66BB6A</color>
     <color name="color_bae3bc">#BAE3BC</color>
