--- a/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
+++ b/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
@@ -178,7 +178,7 @@
                 android:clickable="true"
                 app:sw_lineColor="@color/color_FFDEDEDE"
                 app:sw_markerColor="@color/color_36BDFF"
-                app:sw_maskColor="@color/color_CCE1F0FF"
+                app:sw_maskColor="@color/color_4036BDFF"
                 app:sw_textColor="@color/color_FFAAAAAA" />
 
             <LinearLayout
